--- a/gengine_quickstart_template/production.ini
+++ b/gengine_quickstart_template/production.ini
@@ -4,7 +4,7 @@
 ###
 
 [app:main]
-use = egg:gengine
+use = egg:gamification-engine
 
 pyramid.reload_templates = false
 pyramid.debug_authorization = false
