--- a/development.ini
+++ b/development.ini
@@ -4,7 +4,7 @@
 ###
 
 [app:main]
-use = egg:gengine
+use = egg:gamification-engine
 
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
