add default user/pw combination to alembic.ini

--- a/alembic.ini
+++ b/alembic.ini
@@ -29,7 +29,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgres://user:password@localhost/gengine
 
 
 # Logging configuration
