--- a/development.ini
+++ b/development.ini
@@ -20,6 +20,7 @@ sqlalchemy.url = postgres://user:password@127.0.0.1/gengine
 #reverse proxy settings
 force_https = false
 urlprefix =
+urlcacheid = gengine
 
 #flaskadmin settings
 flaskadmin_secret = 87ghsjkdjfhg85grsfgsdfghwez89hsuif # replace with random string!
