--- a/gengine_quickstart_template/production.ini
+++ b/gengine_quickstart_template/production.ini
@@ -19,6 +19,7 @@ sqlalchemy.url = postgres://user:pw@127.0.0.1/gengine
 #reverse proxy settings
 force_https = false
 urlprefix =
+urlcacheid = gengine
 
 #flaskadmin settings
 flaskadmin_secret = 87ghsjkdjfhg85grsfgsdfghwez89hsuif # replace with random string!
