add raven (logging with sentry)

--- a/alembic.ini
+++ b/alembic.ini
@@ -34,17 +34,17 @@ sqlalchemy.url = postgres://user:password@localhost/gengine
 
 # Logging configuration
 [loggers]
-keys = root,sqlalchemy,alembic
+keys = root,sqlalchemy,alembic,sentry
 
 [handlers]
-keys = console
+keys = console,sentry
 
 [formatters]
 keys = generic
 
 [logger_root]
 level = WARN
-handlers = console
+handlers = console,sentry
 qualname =
 
 [logger_sqlalchemy]
@@ -57,10 +57,22 @@ level = INFO
 handlers =
 qualname = alembic
 
+[logger_sentry]
+level = WARN
+handlers = console
+qualname = sentry.errors
+propagate = 0
+
 [handler_console]
 class = StreamHandler
 args = (sys.stderr,)
 level = NOTSET
+formatter = generic
+
+[handler_sentry]
+class = raven.handlers.logging.SentryHandler
+args = ()
+level = WARNING
 formatter = generic
 
 [formatter_generic]
