--- a/development.ini
+++ b/development.ini
@@ -66,17 +66,17 @@ port = 6543
 ###
 
 [loggers]
-keys = root, gengine, sqlalchemy
+keys = root, gengine, sqlalchemy, sentry
 
 [handlers]
-keys = console
+keys = console, sentry
 
 [formatters]
 keys = generic
 
 [logger_root]
 level = INFO
-handlers = console
+handlers = console,sentry
 
 [logger_gengine]
 level = DEBUG
@@ -91,10 +91,22 @@ qualname = sqlalchemy.engine
 # "level = DEBUG" logs SQL queries and results.
 # "level = WARN" logs neither.  (Recommended for production systems.)
 
+[logger_sentry]
+level = WARN
+handlers = console
+qualname = sentry.errors
+propagate = 0
+
 [handler_console]
 class = StreamHandler
 args = (sys.stderr,)
 level = NOTSET
+formatter = generic
+
+[handler_sentry]
+class = raven.handlers.logging.SentryHandler
+args = ()
+level = WARNING
 formatter = generic
 
 [formatter_generic]
