Add configuration for new caches

--- a/development.ini
+++ b/development.ini
@@ -44,6 +44,12 @@ dogpile_cache.achievements_by_user_for_today.arguments.filename = achievements_b
 dogpile_cache.translations.backend = dogpile.cache.dbm
 dogpile_cache.translations.arguments.filename = translations.dbm
 
+dogpile_cache.achievements_users_levels.backend = dogpile.cache.dbm
+dogpile_cache.achievements_users_levels.arguments.filename = translations.dbm
+
+dogpile_cache.goal_evaluation.backend = dogpile.cache.dbm
+dogpile_cache.goal_evaluation.arguments.filename = translations.dbm
+
 # memcache
 urlcache_url = 127.0.0.1:11211
 urlcache_active = false
