Adapt Caching filenames

--- a/development.ini
+++ b/development.ini
@@ -45,10 +45,10 @@ dogpile_cache.translations.backend = dogpile.cache.dbm
 dogpile_cache.translations.arguments.filename = translations.dbm
 
 dogpile_cache.achievements_users_levels.backend = dogpile.cache.dbm
-dogpile_cache.achievements_users_levels.arguments.filename = translations.dbm
+dogpile_cache.achievements_users_levels.arguments.filename = achievements_users_levels.dbm
 
 dogpile_cache.goal_evaluation.backend = dogpile.cache.dbm
-dogpile_cache.goal_evaluation.arguments.filename = translations.dbm
+dogpile_cache.goal_evaluation.arguments.filename = goal_evaluation.dbm
 
 # memcache
 urlcache_url = 127.0.0.1:11211
