Add goal statements cache config

--- a/development.ini
+++ b/development.ini
@@ -50,6 +50,9 @@ dogpile_cache.achievements_users_levels.arguments.filename = achievements_users_
 dogpile_cache.goal_evaluation.backend = dogpile.cache.dbm
 dogpile_cache.goal_evaluation.arguments.filename = goal_evaluation.dbm
 
+dogpile_cache.goal_statements.backend = dogpile.cache.dbm
+dogpile_cache.goal_statements.arguments.filename = goal_statements.dbm
+
 # memcache
 urlcache_url = 127.0.0.1:11211
 urlcache_active = false
