--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,9 @@ target/
 /*.dbm
 
 venv/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+
+.idea
