--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,15 @@ python:
 
 addons:
   apt:
-    sources:
-      - sourceline: 'deb http://apt.postgresql.org/pub/repos/apt/ precise-pgdg main'
-        key_url: 'https://www.postgresql.org/media/keys/ACCC4CF8.asc'
+#    sources:
+#      - sourceline: 'deb http://apt.postgresql.org/pub/repos/apt/ precise-pgdg main'
+#        key_url: 'https://www.postgresql.org/media/keys/ACCC4CF8.asc'
     packages:
       - postgresql-9.4
 
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
+#  - pip install -r requirements.txt
   - pip install -e .[develop]
 
 # command to run tests
