--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 language: python
+dist: trusty
 python:
   - "3.5"
 sudo: false
 addons:
-  apt:
-#    sources:
-#      - sourceline: 'deb http://apt.postgresql.org/pub/repos/apt/ precise-pgdg main'
-#        key_url: 'https://www.postgresql.org/media/keys/ACCC4CF8.asc'
-    packages:
-      - postgresql-9.4
+  postgresql: "9.4"
+services:
+  - postgresql
+env:
+  - TEST_POSTGRES=/usr/lib/postgresql/9.4/bin/postgres
+  - TEST_INITDB=/usr/lib/postgresql/9.4/bin/initdb
 
 # command to install dependencies
 install:
