--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,20 @@ dist: trusty
 python:
   - "3.5"
 sudo: false
-addons:
-  postgresql: "9.4"
-services:
-  - postgresql
+before_install:
+  - sudo /etc/init.d/postgresql stop
+  - sudo apt-get -y remove --purge postgresql-9.1
+  - sudo apt-get -y remove --purge postgresql-9.2
+  - sudo apt-get -y remove --purge postgresql-9.3
+  - sudo apt-get -y remove --purge postgresql-9.4
+  - sudo apt-get -y autoremove
 env:
-  - TEST_POSTGRES=/usr/lib/postgresql/9.4/bin/postgres
-  - TEST_INITDB=/usr/lib/postgresql/9.4/bin/initdb
-
+  - TEST_POSTGRES=/usr/lib/postgresql/9.5/bin/postgres
+  - TEST_INITDB=/usr/lib/postgresql/9.5/bin/initdb
+apt:
+  packages:
+    - postgresql-9.5
+    - postgresql-contrib-9.5
 # command to install dependencies
 install:
   - "pip install --upgrade -r requirements.txt"
