Adding new test cases

--- a/development.ini
+++ b/development.ini
@@ -15,7 +15,7 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
 
-sqlalchemy.url = postgres://user:password@127.0.0.1/gengine
+sqlalchemy.url = postgres://nilakshi@127.0.0.1/gengine
 
 #reverse proxy settings
 force_https = false
@@ -32,7 +32,7 @@ flaskadmin_secret = 87ghsjkdjfhg85grsfgsdfghwez89hsuif # replace with random str
 # dogpile cache
 dogpile_cache.backend = dogpile.cache.null
 
-dogpile_cache.general.backend = dogpile.cache.dbm
+dogpile_incache.general.backend = dogpile.cache.dbm
 dogpile_cache.general.arguments.filename = general.dbm
 
 dogpile_cache.achievement_eval.backend = dogpile.cache.dbm
