--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 alembic==0.8.8
--e git+https://github.com/ActiDoo/PyAPNs@2bd5517c791333188c949c61d239a63d1596d539#egg=apns
+tapns3==3.0.0
 argon2==0.1.10
 Chameleon==2.25
 click==6.6
