modify ini files to match new features

--- a/development.ini
+++ b/development.ini
@@ -32,7 +32,7 @@ flaskadmin_secret = 87ghsjkdjfhg85grsfgsdfghwez89hsuif # replace with random str
 # dogpile cache
 dogpile_cache.backend = dogpile.cache.null
 
-dogpile_incache.general.backend = dogpile.cache.dbm
+dogpile_cache.general.backend = dogpile.cache.dbm
 dogpile_cache.general.arguments.filename = general.dbm
 
 dogpile_cache.achievement_eval.backend = dogpile.cache.dbm
@@ -58,6 +58,17 @@ urlcache_active = false
 
 # callback url, will be used for time-related leaderboard evaluations (daily,monthly,yearly) (TBD) 
 notify_progress =
+
+enable_user_authentication = false
+fallback_language = en
+gcm.api_key=
+gcm.package=
+apns.dev.key=
+apns.dev.certificate=
+apns.prod.key=
+apns.prod.certificate=
+push_title=Gamification Engine
+
 
 ###
 # wsgi server configuration
