prepare 0.2 (mainly docs)

--- a/development.ini
+++ b/development.ini
@@ -15,7 +15,7 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
 
-sqlalchemy.url = postgres://nilakshi@127.0.0.1/gengine
+sqlalchemy.url = postgres://dev:dev@127.0.0.1/gengine
 
 #reverse proxy settings
 force_https = false
