--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,44 @@
-alembic==0.8.8
-tapns3==3.0.0
-argon2==0.1.10
-Chameleon==2.25
-click==6.6
+alembic==0.9.1
+appdirs==1.4.3
+Chameleon==3.1
+click==6.7
 dogpile.cache==0.6.2
-Flask==0.11.1
-Flask-Admin==1.4.2
+Flask==0.12
+Flask-Admin==1.5.0
+hupper==0.4.4
 itsdangerous==0.24
-Jinja2==2.8
+Jinja2==2.9.5
 jsl==0.2.4
-jsonschema==2.5.1
-Mako==1.0.5
-MarkupSafe==0.23
+jsonschema==2.6.0
+Mako==1.0.6
+MarkupSafe==1.0
 mock==2.0.0
+packaging==16.8
 PasteDeploy==1.5.2
-pbr==1.10.0
-psycopg2==2.6.2
-Pygments==2.1.3
-pymemcache==1.4.0
-pyparsing==2.1.10
-pyramid==1.7.3
+pbr==2.0.0
+psycopg2==2.7.1
+Pygments==2.2.0
+pymemcache==1.4.2
+pyparsing==2.2.0
+pyramid==1.8.3
 pyramid-chameleon==0.3
 pyramid-debugtoolbar==3.0.5
 pyramid-dogpile-cache==0.0.4
 pyramid-mako==1.0.2
-pyramid-tm==1.0.1
-python-editor==1.0.1
-python-gcm==0.4
-pytz==2016.7
-raven==5.31.0
+pyramid-tm==1.1.1
+python-editor==1.0.3
+pytz==2016.10
+raven==6.0.0
 repoze.lru==0.6
-requests==2.11.1
 six==1.10.0
-SQLAlchemy==1.1.3
-transaction==1.6.1
+SQLAlchemy==1.1.7
+transaction==2.1.2
 translationstring==1.3
 venusian==1.0
-waitress==1.0.1
-WebOb==1.6.2
-Werkzeug==0.11.11
+waitress==1.0.2
+WebOb==1.7.2
+Werkzeug==0.12.1
 WTForms==2.1
 zope.deprecation==4.2.0
-zope.interface==4.3.2
+zope.interface==4.3.3
 zope.sqlalchemy==0.7.7
