--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ apt:
 install:
   - pip install coveralls
   - "pip install --upgrade -r requirements.txt"
+  - "pip install --upgrade -r optional-requirements.txt"
   - pip install -e .
 
 # command to run tests
