integrate react build

--- a/development.ini
+++ b/development.ini
@@ -21,6 +21,7 @@ sqlalchemy.url = postgres://dev:dev@127.0.0.1/gengine
 force_https = false
 urlprefix =
 urlcacheid = gengine
+load_from_webpack_dev_server = true
 
 #flaskadmin settings
 flaskadmin_secret = 87ghsjkdjfhg85grsfgsdfghwez89hsuif # replace with random string!
