work on group assignment widget

--- a/development.ini
+++ b/development.ini
@@ -23,6 +23,8 @@ urlprefix =
 urlcacheid = gengine
 load_from_webpack_dev_server = true
 
+swagger.enable_http_scheme = true
+
 #flaskadmin settings
 flaskadmin_secret = 87ghsjkdjfhg85grsfgsdfghwez89hsuif # replace with random string!
 
