--- a/gengine/app/jsscripts/package.json
+++ b/gengine/app/jsscripts/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "dependencies": {
     "intl": "^1.2.5",
+    "lodash": "^4.17.4",
     "mobile-detect": "^1.3.6",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-intl": "^2.3.0",
     "react-redux": "^5.0.5",
+    "react-router": "^3.0.5",
     "redux": "^3.6.0",
     "redux-saga": "^0.15.3",
     "reselect": "^3.0.1",
-    "swagger-client": "^2.2.21",
+    "swagger-client": "^2.1.32",
+    "urijs": "^1.18.10",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
@@ -23,10 +26,13 @@
     "remote-redux-devtools": "^0.5.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "watch": "nodemon -w src -w public -x \"npm run build\""
+    "watch": "nodemon -w src -w public -x \"npm run build\"",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build": "npm run build-css && react-scripts build"
   }
 }
