--- a/development.ini
+++ b/development.ini
@@ -23,7 +23,8 @@ urlprefix =
 urlcacheid = gengine
 load_from_webpack_dev_server = true
 
-swagger.enable_http_scheme = true
+swagger.use_http_scheme = true
+swagger.host = localhost:6543
 
 #flaskadmin settings
 flaskadmin_secret = 87ghsjkdjfhg85grsfgsdfghwez89hsuif # replace with random string!
