--- a/gengine/app/jsscripts/package.json
+++ b/gengine/app/jsscripts/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
     "mobile-detect": "^1.3.6",
@@ -14,7 +15,7 @@
     "redux": "^3.6.0",
     "redux-saga": "^0.15.3",
     "reselect": "^3.0.1",
-    "swagger-client": "^2.1.32",
+    "swagger-client": "^3.0.12",
     "urijs": "^1.18.10",
     "uuid": "^3.0.1"
   },
