--- a/development.ini
+++ b/development.ini
@@ -9,7 +9,7 @@ use = egg:gamification-engine
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
-pyramid.debug_routematch = false
+pyramid.debug_routematch = true
 pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
