--- a/gengine/app/jsscripts/package.json
+++ b/gengine/app/jsscripts/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "input-moment": "^0.3.4",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
     "mobile-detect": "^1.3.6",
+    "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-fontawesome": "^1.6.1",
     "react-intl": "^2.3.0",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
+    "react-select": "^1.0.0-rc.5",
     "redux": "^3.6.0",
     "redux-saga": "^0.15.3",
     "reselect": "^3.0.1",
