--- a/development.ini
+++ b/development.ini
@@ -15,7 +15,7 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
 
-sqlalchemy.url = postgres://dev:dev@127.0.0.1/gengine
+sqlalchemy.url = postgres://postgres:password@postgres/gengine
 
 #reverse proxy settings
 force_https = false
@@ -57,13 +57,13 @@ dogpile_cache.goal_evaluation.arguments.filename = goal_evaluation.dbm
 dogpile_cache.goal_statements.backend = dogpile.cache.memory
 
 # memcache
-urlcache_url = 127.0.0.1:11211
-urlcache_active = false
+urlcache_url = memcached:11211
+urlcache_active = true
 
 # callback url, will be used for time-related leaderboard evaluations (daily,monthly,yearly) (TBD) 
 notify_progress =
 
-enable_user_authentication = true
+enable_user_authentication = false
 fallback_language = en
 gcm.api_key=
 gcm.package=
@@ -98,7 +98,7 @@ keys = console, sentry
 keys = generic
 
 [logger_root]
-level = INFO
+level = DEBUG
 handlers = console,sentry
 
 [logger_gengine]
@@ -107,7 +107,7 @@ handlers =
 qualname = gengine
 
 [logger_sqlalchemy]
-level = INFO
+level = DEBUG
 handlers =
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
