--- a/gengine_quickstart_template/production.ini
+++ b/gengine_quickstart_template/production.ini
@@ -14,12 +14,17 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
 
-sqlalchemy.url = postgres://user:pw@127.0.0.1/gengine
+sqlalchemy.url = postgres://postgres:password@postgres/gengine
 
 #reverse proxy settings
 force_https = false
 urlprefix =
 urlcacheid = gengine
+
+#swagger
+swagger.use_http_scheme = true
+#leave empty because swagger url is somehow used in some react code (leaving empty makes it use relative path)
+swagger.host =
 
 #flaskadmin settings
 flaskadmin_secret = 87ghsjkdjfhg85grsfgsdfghwez89hsuif # replace with random string!
@@ -48,13 +53,13 @@ dogpile_cache.goal_evaluation.arguments.filename = goal_evaluation.dbm
 dogpile_cache.goal_statements.backend = dogpile.cache.memory
 
 # memcache
-urlcache_url = 127.0.0.1:11211
+urlcache_url = memcached:11211
 urlcache_active = true
 
 # callback url, will be used for time-related leaderboard evaluations (daily,monthly,yearly) (TBD) 
 notify_progress =
 
-enable_user_authentication = false
+enable_user_authentication = true
 fallback_language = en
 gcm.api_key=
 gcm.package=
@@ -68,10 +73,10 @@ push_title=Gamification Engine
 # wsgi server configuration
 ###
 
-[server:main]
-use = egg:waitress#main
-host = 0.0.0.0
-port = 6543
+#[server:main]
+#use = egg:waitress#main
+#host = 0.0.0.0
+#port = 6543
 
 
 ###
