--- a/docker-files/nginx-dev.conf
+++ b/docker-files/nginx-dev.conf
@@ -24,17 +24,13 @@ http {
 	client_body_timeout 5;
 
 	upstream app_server {
-		server unix:///tmp/nginx.socket; 
+		server unix:///run/uwsgi/uwsgi.socket;
  	}
 
 	server {
 		listen 80;
 		server_name _;
 		keepalive_timeout 5;
-
-		location = / {
-			rewrite ^/(.*)$ /admin/$1 last;
-		}
 		
 		location / {
 			#expires       -1;
