--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ env:
   - TEST_POSTGRES=/usr/lib/postgresql/10/bin/postgres TEST_INITDB=/usr/lib/postgresql/10/bin/initdb
 # command to install dependencies
 install:
-  - rm -rf /var/lib/postgresql
-  - DEBIAN_FRONTEND=noninteractive apt-get install -qq postgresql-10 postgresql-contrib-10 postgis
+  - sudo rm -rf /var/lib/postgresql
+  - sudo DEBIAN_FRONTEND=noninteractive apt-get install -qq postgresql-10 postgresql-contrib-10 postgis
   - pip install coveralls
   - "pip install --upgrade -r requirements.txt"
   - "pip install --upgrade -r optional-requirements.txt"
