--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ python-editor==1.0.3
 pytz==2016.10
 raven==6.0.0
 repoze.lru==0.6
+sentry-sdk==0.14.0
 six==1.10.0
 SQLAlchemy==1.3.0
 transaction==2.1.2
