--- a/docker-files/nginx-prod.conf
+++ b/docker-files/nginx-prod.conf
@@ -24,7 +24,7 @@ http {
 	client_body_timeout 5;
 
 	upstream app_server {
-		server unix:///run/uwsgi/uwsgi.socket;
+		server python:3031;
  	}
 
 	server {
